--- a/sandiegodesserts.html
+++ b/sandiegodesserts.html
@@ -76,6 +76,9 @@
               <img src="assets/images/food/bakedbear.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">The Baked Bear</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -83,12 +86,18 @@
               <img src="assets/images/food/susiecakes.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">SusieCakes</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/nbc.png" class="rounded-circle" >
             </a>
+            <figcaption class="mt-2">
+              <a class="tstbite-category-title">Nothing Bundt Cakes</a>
+            </figcaption>
           </figure>
         </div>   
       </div>
