--- a/sandiegores.html
+++ b/sandiegores.html
@@ -76,6 +76,9 @@
               <img src="assets/images/food/buona.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Buona Forchetta</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -83,6 +86,9 @@
               <img src="assets/images/food/vaga.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Vaga</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -90,6 +96,9 @@
               <img src="assets/images/food/waverly.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Waverly</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -97,6 +106,9 @@
               <img src="assets/images/food/homestead.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Homestead</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -104,6 +116,9 @@
               <img src="assets/images/food/blueocean.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Blue Ocean</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -111,6 +126,9 @@
               <img src="assets/images/food/nobusd.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Nobu</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -118,6 +136,9 @@
               <img src="assets/images/food/cucinaitaliana.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Cucina Italiana</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -125,6 +146,9 @@
               <img src="assets/images/food/cardellino.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Cardellino</a>
+          </figcaption>
         </div>
       </div>
     </section>
