--- a/vegasbakeries.html
+++ b/vegasbakeries.html
@@ -76,6 +76,9 @@
               <img src="assets/images/food/mothership.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Mothership</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -83,6 +86,9 @@
               <img src="assets/images/food/cafegelato.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Cafe Gelato</a>
+          </figcaption>
         </div>
       </div>
     </section>
