--- a/vegasres.html
+++ b/vegasres.html
@@ -76,6 +76,9 @@
               <img src="assets/images/food/sushiroku.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Sushi Roku</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -83,6 +86,9 @@
               <img src="assets/images/food/nobulv.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Nobu</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -90,6 +96,19 @@
               <img src="assets/images/food/carbone.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Carbone</a>
+          </figcaption>
+        </div>
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a  class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/catch.png" class="rounded-circle" >
+            </a>
+          </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Catch</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -97,6 +116,9 @@
               <img src="assets/images/food/urthcaffelv.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Urth Caffe</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -104,6 +126,9 @@
               <img src="assets/images/food/primrose.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Primrose</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -111,6 +136,9 @@
               <img src="assets/images/food/tableau.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Tableau</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -118,6 +146,9 @@
               <img src="assets/images/food/wazuzu.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Wazuzu</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -125,6 +156,9 @@
               <img src="assets/images/food/lago.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Lago</a>
+          </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
@@ -132,6 +166,9 @@
               <img src="assets/images/food/konagrill.png" class="rounded-circle" >
             </a>
           </figure>
+          <figcaption class="mt-2">
+            <a class="tstbite-category-title">Kona Grill</a>
+          </figcaption>
         </div>
       </div>
     </section>
