--- a/sandiegodesserts.html
+++ b/sandiegodesserts.html
@@ -75,7 +75,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/bakedbear.png" class="rounded-circle" >
             </a>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">The Baked Bear</a>
           </figcaption>
         </figure>
@@ -85,7 +85,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/susiecakes.png" class="rounded-circle" >
             </a>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">SusieCakes</a>
           </figcaption>
         </figure>
@@ -95,7 +95,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/nbc.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Nothing Bundt Cakes</a>
             </figcaption>
           </figure>
