--- a/newyorkbakeries.html
+++ b/newyorkbakeries.html
@@ -75,7 +75,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/angelina.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Angelina Paris</a>
             </figcaption>
           </figure>
@@ -85,7 +85,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/laduree.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Ladurée</a>
             </figcaption>
           </figure>
@@ -95,7 +95,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/eclair.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Eclair Bakery</a>
             </figcaption>
           </figure>
@@ -105,7 +105,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/maman.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Maman</a>
             </figcaption>
           </figure>
@@ -115,7 +115,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/dominique.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Dominique Ansel</a>
             </figcaption>
           </figure>
