--- a/newyorkres.html
+++ b/newyorkres.html
@@ -75,7 +75,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/maria.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Maria Restaurant</a>
             </figcaption>
           </figure>
@@ -85,7 +85,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/julianas.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Juliana's Pizza</a>
             </figcaption>
           </figure>
@@ -95,7 +95,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/zeroottonove.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Zero Otto Nove</a>
             </figcaption>
           </figure>
@@ -105,7 +105,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/bistrovendome.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Bistro Vendôme</a>
             </figcaption>
           </figure>
@@ -115,7 +115,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cafechina.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Café China</a>
             </figcaption>
           </figure>
@@ -125,7 +125,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/oxomoco.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Oxomoco</a>
             </figcaption>
           </figure>
