--- a/sandiegobakeries.html
+++ b/sandiegobakeries.html
@@ -75,7 +75,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/wayfarer.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Wayfarer Bread & Pastry</a>
             </figcaption>
           </figure>
@@ -85,7 +85,7 @@
             <a class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/madeleine.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a class="tstbite-category-title">Madeleine Café & Bakery</a>
             </figcaption>
           </figure>
