--- a/sandiegores.html
+++ b/sandiegores.html
@@ -76,7 +76,7 @@
               <img src="assets/images/food/buona.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Buona Forchetta</a>
           </figcaption>
         </div>
@@ -86,7 +86,7 @@
               <img src="assets/images/food/vaga.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Vaga</a>
           </figcaption>
         </div>
@@ -96,7 +96,7 @@
               <img src="assets/images/food/waverly.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Waverly</a>
           </figcaption>
         </div>
@@ -106,7 +106,7 @@
               <img src="assets/images/food/homestead.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Homestead</a>
           </figcaption>
         </div>
@@ -116,7 +116,7 @@
               <img src="assets/images/food/blueocean.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Blue Ocean</a>
           </figcaption>
         </div>
@@ -126,7 +126,7 @@
               <img src="assets/images/food/nobusd.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Nobu</a>
           </figcaption>
         </div>
@@ -136,7 +136,7 @@
               <img src="assets/images/food/cucinaitaliana.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Cucina Italiana</a>
           </figcaption>
         </div>
@@ -146,7 +146,7 @@
               <img src="assets/images/food/cardellino.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Cardellino</a>
           </figcaption>
         </div>
