--- a/vegasbakeries.html
+++ b/vegasbakeries.html
@@ -76,7 +76,7 @@
               <img src="assets/images/food/mothership.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Mothership</a>
           </figcaption>
         </div>
@@ -86,7 +86,7 @@
               <img src="assets/images/food/cafegelato.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Cafe Gelato</a>
           </figcaption>
         </div>
