--- a/vegasres.html
+++ b/vegasres.html
@@ -76,7 +76,7 @@
               <img src="assets/images/food/sushiroku.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Sushi Roku</a>
           </figcaption>
         </div>
@@ -86,7 +86,7 @@
               <img src="assets/images/food/nobulv.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Nobu</a>
           </figcaption>
         </div>
@@ -96,7 +96,7 @@
               <img src="assets/images/food/carbone.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Carbone</a>
           </figcaption>
         </div>
@@ -106,7 +106,7 @@
               <img src="assets/images/food/catch.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Catch</a>
           </figcaption>
         </div>
@@ -116,7 +116,7 @@
               <img src="assets/images/food/urthcaffelv.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Urth Caffe</a>
           </figcaption>
         </div>
@@ -126,7 +126,7 @@
               <img src="assets/images/food/primrose.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Primrose</a>
           </figcaption>
         </div>
@@ -136,7 +136,7 @@
               <img src="assets/images/food/tableau.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Tableau</a>
           </figcaption>
         </div>
@@ -146,7 +146,7 @@
               <img src="assets/images/food/wazuzu.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Wazuzu</a>
           </figcaption>
         </div>
@@ -156,7 +156,7 @@
               <img src="assets/images/food/lago.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Lago</a>
           </figcaption>
         </div>
@@ -166,7 +166,7 @@
               <img src="assets/images/food/konagrill.png" class="rounded-circle" >
             </a>
           </figure>
-          <figcaption class="mt-2">
+          <figcaption class="text-center mt-2">
             <a class="tstbite-category-title">Kona Grill</a>
           </figcaption>
         </div>
