--- a/lares.html
+++ b/lares.html
@@ -75,7 +75,7 @@
             <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
             </figcaption>
           </figure>
@@ -85,7 +85,7 @@
             <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
             </figcaption>
           </figure>
@@ -95,7 +95,7 @@
             <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
             </figcaption>
           </figure>
@@ -105,7 +105,7 @@
             <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
               <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
             </a>
-            <figcaption class="mt-2">
+            <figcaption class="text-center mt-2">
               <a href="/bars" class="tstbite-category-title">Other</a>
             </figcaption>
           </figure>
