--- a/gfdfv.html
+++ b/gfdfv.html
@@ -105,11 +105,11 @@
       <div class="row">
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/harissameatballs" class="tstbite-animation rounded-6">
               <img src="assets/images/food/harissameatballs.png" class="w-100" alt="Harissa Meatballs">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Harissa Meatballs</a>
+              <a href="/harissameatballs" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Harissa Meatballs</a>
             </figcaption>
           </figure>
         </div>
