--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -159,6 +159,10 @@
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">2 tablespoons almond milk</label>
                 </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">Harissa to taste</label>
+                </div>
               </div>
             </div>
           </div>
