--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -163,6 +163,10 @@
                   <input type="checkbox"  class="form-check-input">
                   <label class="form-check-label" for="unsalted">Harissa to taste</label>
                 </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">Fresh parsley to taste</label>
+                </div>
               </div>
             </div>
           </div>
@@ -188,7 +192,7 @@
                 </li>
                 <li>
                   <span>5</span>
-                  Bake uncovered 20 to 22 minutes, or until internal temperature reaches 165°F, flipping meatballs halfway through. Serve with harissa.
+                  Bake uncovered 20 to 22 minutes, or until internal temperature reaches 165°F, flipping meatballs halfway through. Serve with harissa and parsley.
                 </li>
               </ul>
             </div>
