--- a/harissameatballs.html
+++ b/harissameatballs.html
@@ -141,7 +141,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 teaspoon fresh chopped basil</label>
+                  <label class="form-check-label" for="crackers">1 teaspoon fresh basil, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
