--- a/chocolateavocadocookies.html
+++ b/chocolateavocadocookies.html
@@ -168,19 +168,23 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Preheat oven to 350°F and line an 8x8-inch pan with parchment paper. Set aside.
+                  Preheat oven to 325°F and line a baking sheet with parchment paper. Set aside.
                 </li>
                 <li>
                   <span>2</span>
-                  In a large mixing bowl, add the applesauce, almond butter, and maple syrup and whisk together until smooth. Add the coconut sugar, cocoa powder, baking soda, salt, and vanilla extract and mix until just combined.
+                  In a food processor, blend avocado and sugar until it makes a smooth paste.
                 </li>
                 <li>
                   <span>3</span>
-                  Transfer the batter into the lined pan and bake for 30-35 minutes, or until a skewer comes out mostly clean.
+                  Transfer the paste to a mixer with the paddle attachment and mix in cocoa powder and baking soda until it comes together.
                 </li>
                 <li>
                   <span>4</span>
-                  Remove the brownies from the oven and let them cool completely.
+                  Using a cookie scoop, portion the dough onto the baking sheet. Add 1 to 3 chocolate chunks to each cookie, pressing down on each chunk.
+                </li>
+                <li>
+                  <span>5</span>
+                  Bake for 8-10 minutes until cookies are firm and moist.
                 </li>
               </ul>
             </div>
