--- a/gfdfv.html
+++ b/gfdfv.html
@@ -147,11 +147,11 @@
           </div>
         <div class="col-md-4">
           <figure class="my-3 tstbite-card">
-            <a href="/comingsoon" class="tstbite-animation rounded-6">
+            <a href="/chocolateavocadocookies" class="tstbite-animation rounded-6">
               <img src="assets/images/food/chocolateavocadocookies.jpg" class="w-100" alt="Chocolate Avocado Cookies">
             </a>
             <figcaption class="mt-2">
-              <a href="/comingsoon" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
+              <a href="/chocolateavocadocookies" class="f-size-20 text-black d-block mt-1 font-weight-semibold">Chocolate Avocado Cookies</a>
             </figcaption>
           </figure>
         </div>
