--- a/sandiegores.html
+++ b/sandiegores.html
@@ -137,7 +137,7 @@
             </a>
           </figure>
           <figcaption class="text-center mt-2">
-            <a class="tstbite-category-title">Cucina Italiana</a>
+            <a class="tstbite-category-title">2051 Cucina Italiana</a>
           </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
