--- a/sandiegores.html
+++ b/sandiegores.html
@@ -87,7 +87,7 @@
             </a>
           </figure>
           <figcaption class="text-center mt-2">
-            <a class="tstbite-category-title">Vaga</a>
+            <a class="tstbite-category-title">VAGA</a>
           </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -107,7 +107,7 @@
             </a>
           </figure>
           <figcaption class="text-center mt-2">
-            <a class="tstbite-category-title">Homestead</a>
+            <a class="tstbite-category-title">Homestead Solana Beach</a>
           </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
@@ -117,7 +117,7 @@
             </a>
           </figure>
           <figcaption class="text-center mt-2">
-            <a class="tstbite-category-title">Blue Ocean</a>
+            <a class="tstbite-category-title">Blue Ocean Robata & Sushi Bar</a>
           </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
