--- a/vegasres.html
+++ b/vegasres.html
@@ -117,7 +117,7 @@
             </a>
           </figure>
           <figcaption class="text-center mt-2">
-            <a class="tstbite-category-title">Urth Caffe</a>
+            <a class="tstbite-category-title">Urth Caffé</a>
           </figcaption>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
