--- a/arizonares.html
+++ b/arizonares.html
@@ -69,48 +69,58 @@
 
     <section class="tstbite-components my-4 my-md-5">
       <h5 class="py-3 mb-0">Arizona</h5>
-      <!-- <div class="row">
+      <div class="row">
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/restaurants" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/cookieicon.jpeg" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/nobuaz.png" class="rounded-circle" >
             </a>
             <figcaption class="text-center mt-2">
-              <a href="/restaurants" class="tstbite-category-title">Restaurants</a>
+              <a class="tstbite-category-title">Nobu</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/healthierdesserts" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/meringuesicon.png" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/mapleandash.png" class="rounded-circle" >
             </a>
             <figcaption class="text-center mt-2">
-              <a href="/healthierdesserts" class="tstbite-category-title">Desserts</a>
+              <a class="tstbite-category-title">Maple & Ash</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/breads" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/breadsicon.jpeg" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/oceanprimeaz.png" class="rounded-circle" >
             </a>
             <figcaption class="text-center mt-2">
-              <a href="/breads" class="tstbite-category-title">Bakeries/Cafes</a>
+              <a class="tstbite-category-title">Ocean Prime</a>
             </figcaption>
           </figure>
         </div>
         <div class="col-lg-2 col-md-4 col-4">
           <figure class="my-3 text-center tstbite-card">
-            <a href="/bars" class="tstbite-animation stretched-link rounded-circle">
-              <img src="assets/images/food/butterbarsicon.png" class="rounded-circle" >
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/swb.png" class="rounded-circle" >
             </a>
             <figcaption class="text-center mt-2">
-              <a href="/bars" class="tstbite-category-title">Other</a>
+              <a class="tstbite-category-title">Southwest Bistro</a>
             </figcaption>
           </figure>
         </div>
-      </div> -->
+        <div class="col-lg-2 col-md-4 col-4">
+          <figure class="my-3 text-center tstbite-card">
+            <a class="tstbite-animation stretched-link rounded-circle">
+              <img src="assets/images/food/grimaldisaz.png" class="rounded-circle" >
+            </a>
+            <figcaption class="text-center mt-2">
+              <a class="tstbite-category-title">Grimaldi's</a>
+            </figcaption>
+          </figure>
+        </div>
+      </div>
     </section>
   </div>
 </section>
