--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             </div>
           </div>
         </div>
-        <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Hi! Welcome to my digital cookbook, which I regularly update with my tried-and-true, all-time favorite recipes. Hope you enjoy.</p>
+        <p class="big pe-0 pe-md-5 pb-3 pb-sm-5 pb-lg-0">Hi! Welcome to my digital cookbook, which I regularly update with my tried-and-true, all-time favorite recipes. You'll also find my favorite restaurants, bakeries, and dessert shops throughout NY, CA, AZ, and NV. Hope you enjoy.</p>
         <div class="tstbite-social my-4 my-md-0">
           <a href="https://www.instagram.com/nyctreats/">
             <svg data-name="feather-icon/instagram" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20">
