--- a/desserts.html
+++ b/desserts.html
@@ -71,7 +71,7 @@
       <h5 class="py-3 mb-0"><a href="/sandiegodesserts" style="color: #FF6330">San Diego</a></h5>
       <h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Las Vegas</a></h5>
       <h5 class="py-3 mb-0"><a href="/newyorkdesserts" style="color: #FF6330">New York</a></h5>
-      <h5 class="py-3 mb-0"><a href="/arizonadesserts" style="color: #FF6330">Arizona</a></h5>
+      <h5 class="py-3 mb-0"><a href="/arizonadesserts" style="color: #FF6330">Scottsdale</a></h5>
       <!--<h5 class="py-3 mb-0"><a href="/comingsoon" style="color: #FF6330">Los Angeles</a></h5>-->
     </section>
   </div>
