--- a/chocolateavocadocookies.html
+++ b/chocolateavocadocookies.html
@@ -133,15 +133,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 + 1/2 cup coconut sugar</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 cup coconut sugar</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 + 1/2 cup cocoa powder</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 cup cocoa powder</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="crackers">1 + 1/2 teaspoon baking soda</label>
+                  <label class="form-check-label" for="crackers">1 1/2 teaspoon baking soda</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
