--- a/chocolatechipcookiecake.html
+++ b/chocolatechipcookiecake.html
@@ -162,7 +162,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">1 and 1/2 cup (225g) semi-sweet chocolate chips</label>
+                  <label class="form-check-label" for="unsalted">1 1/2 cup (225g) semi-sweet chocolate chips</label>
                 </div>
               </div>
               <div class="checklist pb-4">
