--- a/crepes.html
+++ b/crepes.html
@@ -137,7 +137,7 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
-                  <label class="form-check-label" for="unsalted">2 + 2/3 cups milk, separated</label>
+                  <label class="form-check-label" for="unsalted">2 2/3 cups milk, separated</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox"  class="form-check-input">
