--- a/fineherbdressing.html
+++ b/fineherbdressing.html
@@ -145,15 +145,15 @@
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
-                  <label class="form-check-label" for="tablespoonpowdered">4 bunches chopped cilantro</label>
+                  <label class="form-check-label" for="tablespoonpowdered">4 bunches cilantro, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
-                  <label class="form-check-label" for="tablespoonpowdered">1/2 cup chopped fresh oregano</label>
+                  <label class="form-check-label" for="tablespoonpowdered">1/2 cup fresh oregano, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
-                  <label class="form-check-label" for="tablespoonpowdered">10 stalks chopped fresh rosemary</label>
+                  <label class="form-check-label" for="tablespoonpowdered">10 stalks fresh rosemary, chopped</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
                   <input type="checkbox" id="tablespoonpowdered" name="tablespoonpowdered" class="form-check-input">
