--- a/rosemarygarlicdressing.html
+++ b/rosemarygarlicdressing.html
@@ -110,7 +110,7 @@
               </li>
               <li>
                 <small>Serving</small>
-                <span>4-6
+                <span>3
                 </span>
               </li>
             </ul>
