--- a/gfdfvdinnerrolls.html
+++ b/gfdfvdinnerrolls.html
@@ -81,36 +81,44 @@
             </svg>
             <span class="ms-2 caption font-weight-medium">100% would make this again</span>
           </strong>
-          <h5 class="py-3 mb-0 h2">Rosemary Chicken Sandwich</h5>
+          <h5 class="py-3 mb-0 h2">Dinner Rolls</h5>
         </div>
       </div>
       <div class="d-flex flex-wrap">
         <div class="my-2 me-4">
-          <small class="ps-1">Author: Me</small>
+          <small class="ps-1">Author: Sally's Baking Addiction</small>
         </div>
         <div class="my-2 me-4">
           <svg xmlns="http://www.w3.org/2000/svg" width="13.333" height="14.666" viewBox="0 0 13.333 14.666">
             <path d="M2,14.666a2,2,0,0,1-2-2V3.333a2,2,0,0,1,2-2H3.334V.667a.667.667,0,0,1,1.333,0v.667h4V.667A.667.667,0,0,1,10,.667v.667h1.333a2,2,0,0,1,2,2v9.334a2,2,0,0,1-2,2Zm-.667-2A.667.667,0,0,0,2,13.333h9.334A.667.667,0,0,0,12,12.667v-6H1.333ZM12,5.333v-2a.667.667,0,0,0-.667-.667H10v.667a.667.667,0,0,1-1.334,0V2.666h-4v.667a.667.667,0,1,1-1.333,0V2.666H2a.667.667,0,0,0-.667.667v2Z"/>
           </svg>
-          <small>July 1st, 2023</small>
+          <small>January 20th, 2023</small>
         </div>
       </div>
       <div class="blog-detail">
         <hr>
         <div class="rounded-12 overflow-hidden position-relative tstbite-svg">
-          <img src="assets/images/food/rosemarychickensandwich.jpg" class="w-100" >
+          <img src="assets/images/food/dinnerrolls.jpg" class="w-100" >
         </div>
         <br>
         <div class="row mt-0 mt-md-5">
           <div class="col-md-12">
             <ul class="list-unstyled component-list tstbite-svg">
               <li>
+                <small>Prep Time</small>
+                <span>3 hours 25 minutes</span>
+              </li>
+              <li>
+                <small>Cook Time</small>
+                <span>22 minutes</span>
+              </li>
+              <li>
                 <small>Total Time</small>
-                <span>30 minutes</span>
+                <span>3 hours 45 minutes</span>
               </li>
               <li>
                 <small>Serving</small>
-                <span>2
+                <span>6 large rolls, 14 small rolls
                 </span>
               </li>
             </ul>
@@ -120,20 +128,36 @@
               <h6>Ingredients</h6>
               <div class="checklist pb-2">
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="marshmallows" name="marshmallows" class="form-check-input">
-                  <label class="form-check-label" for="marshmallows">1 batch <a href="/gfdfvdinnerrolls"> GF/DF/V dinner rolls</a></label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="crackers">3 cups (390g) flour (spoon & leveled)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="melted" name="melted" class="form-check-input">
-                  <label class="form-check-label" for="melted">Grilled chicken</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1  cup (240ml) whole milk, warmed to about 110°F (43°C)</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="Philadelphia" name="Philadelphia" class="form-check-input">
-                  <label class="form-check-label" for="Philadelphia"><a href="/rosemarygarlicdressing">Rosemary garlic dressing</a></label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 packet instant yeast</label>
                 </div>
                 <div class="form-check form-check-rounded recipe-checkbox">
-                  <input type="checkbox" id="thickened" name="thickened" class="form-check-input">
-                  <label class="form-check-label" for="thickened">Romaine lettuce to taste</label>
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 tablespoons granulated sugar, divided</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 large egg</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1/4 cup (60g) unsalted butter, softened to room temperature and cut into 4 pieces</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">1 teaspoon salt</label>
+                </div>
+                <div class="form-check form-check-rounded recipe-checkbox">
+                  <input type="checkbox"  class="form-check-input">
+                  <label class="form-check-label" for="unsalted">2 tablespoons melted unsalted butter (optional topping)</label>
                 </div>
               </div>
             </div>
@@ -144,7 +168,43 @@
               <ul class="instruction-list list-unstyled">
                 <li>
                   <span>1</span>
-                  Grill chicken, bake rolls, and make dressing. Assemble sandwiches.
+                  <b>Prepare the dough: </b>Whisk the warm milk, yeast, and 1 tablespoon of sugar together in the bowl of your stand mixer. Cover and allow to sit for 5 minutes. *If you do not own a stand mixer, you can do this in a large mixing bowl and in the next step, mix the dough together with a large wooden spoon/rubber spatula. It will take a bit of arm muscle. A hand mixer works, but the sticky dough repeatedly gets stuck in the beaters. Mixing by hand with a wooden spoon or rubber spatula is a better choice.*
+                </li>
+                <li>
+                  <span>2</span>
+                  Add the remaining sugar, egg, butter, salt, and 1 cup flour. With a dough hook or paddle attachment, mix/beat on low speed for 30 seconds, scrape down the sides of the bowl with a rubber spatula, then add the remaining flour. Beat on medium speed until the dough comes together and pulls away from the sides of the bowl, about 2 minutes. If the dough seems too wet to a point where kneading (next step) would be impossible, beat in more flour 1 tablespoon at a time until you have a workable dough, similar to the photos above. Dough should be soft and a little sticky, but still manageable to knead with lightly floured hands.
+                </li>
+                <li>
+                  <span>3</span>
+                  <b>Knead the dough: </b>Keep the dough in the mixer and beat for an additional 3 full minutes or knead by hand on a lightly floured surface for 3 full minutes.
+                </li>
+                <li>
+                  <span>4</span>
+                  <b>1st Rise: </b>Lightly grease a large bowl with oil or nonstick spray. Place the dough in the bowl, turning it to coat all sides in the oil. Cover the bowl with aluminum foil, plastic wrap, or a clean kitchen towel. Allow the dough to rise in a relatively warm environment for 1-2 hours or until double in size.
+                </li>
+                <li>
+                  <span>5</span>
+                  Grease a glass 9x13-inch baking pan (rolls tend to brown a little too quickly in a metal pan). You can also bake the rolls in a cast iron skillet or on a lined baking sheet.*
+                </li>
+                <li>
+                  <span>6</span>
+                  <b>Shape the rolls: </b>bWhen the dough is ready, punch it down to release the air. Divide the dough into 14-16 equal pieces. (Just eyeball it- doesn't need to be perfect!) Shape each piece into a smooth ball. Arrange in prepared baking pan.
+                </li>
+                <li>
+                  <span>7</span>
+                  <b>2nd Rise: </b>Cover shaped rolls with aluminum foil, plastic wrap, or a clean kitchen towel. Allow to rise until puffy, about 1 hour.
+                </li>
+                <li>
+                  <span>8</span>
+                  Adjust oven rack to a lower position and preheat oven to 350°F (177°C). (It's best to bake the rolls towards the bottom of the oven so the tops don't burn.)
+                </li>
+                <li>
+                  <span>9</span>
+                  <b>Bake the rolls: </b>Bake for 20-25 minutes or until golden brown on top, rotating the pan halfway through. If you notice the tops browning too quickly, loosely tent the pan with aluminum foil. Remove from the oven, brush with optional honey butter topping, and allow rolls to cool for a few minutes before serving.
+                </li>
+                <li>
+                  <span>10</span>
+                  Cover leftover rolls tightly and store at room temperature for 2-3 days or in the refrigerator for up to 1 week.
                 </li>
               </ul>
             </div>
